<?xml version="1.0"?>
<package format="2">
  <name>pcimr_tutorial</name>
  <version>0.0.0</version>
  <description>The pcimr_tutorial package</description>

  <author email="Qianhao.li@tum.de">Li Qianhao</author>
  <maintainer email="Qianhao.li@tum.de">Li Qianhao</maintainer>

  <license>BSD</license>

  <!-- <url type="website">https://github.com/hoaklee/pcimr_tutorial/tree/tutorial-03> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
