<?xml version="1.0"?>
<package format="2">
  <name>pcimr_tutorial_01</name>
  <version>0.0.0</version>
  <description>The pcimr_tutorial_01 package</description>

  <author email="qianhao.li@tum.de">Qianhao Li</author>
  <maintainer email="qianhao.li@tum.de">Qianhao Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
